--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,10 +2,12 @@
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5001",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "jquery": "^3.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
@@ -15,8 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-	"prebuild":"rm -rf ../backend/templates/index.html && rm -rf ../backend/static/",
-	"postbuild": "mv build/index.html ../backend/templates/ &&  mv build/static/ ../backend/static/ &&  mv build/manifest.json ../backend/templates/"
+    "prebuild": "rm -rf ../backend/templates/index.html && rm -rf ../backend/static/",
+    "postbuild": "mv build/index.html ../backend/templates/ &&  mv build/static/ ../backend/static/ &&  mv build/manifest.json ../backend/templates/"
   },
   "eslintConfig": {
     "extends": "react-app"
